--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.6",
+    "aws-amplify": "^4.3.24",
+    "cross-env": "^7.0.3",
     "graphql": "^16.5.0",
     "next": "12.1.6",
     "react": "18.1.0",
